--- a/templates/accordion/accordion.twig
+++ b/templates/accordion/accordion.twig
@@ -19,7 +19,7 @@
       <a href="#accordion-{{ id }}" class="au-accordion__title"
          aria-expanded="true" aria-selected="true" aria-controls="accordion-{{ id }}" role="tab" onclick="return AU.accordion.Toggle( this{{ speed }} )">{{ title }}</a>
 
-      <div class="au-accordion__body" aria-hidden="false" id="accordion-{{ id }}">
+      <div class="au-accordion__body" id="accordion-{{ id }}">
         <div class="au-accordion__body-wrapper">{{ body }}</div>
       </div>
 
@@ -28,7 +28,7 @@
       <a href="#accordion-{{ id }}" class="au-accordion__title au-accordion--closed"
          aria-expanded="false" aria-selected="false" aria-controls="accordion-{{ id }}" role="tab" onclick="return AU.accordion.Toggle( this{{ speed }} )">{{ title }}</a>
 
-      <div class="au-accordion__body au-accordion--closed" aria-hidden="true" id="accordion-{{ id }}">
+      <div class="au-accordion__body au-accordion--closed" id="accordion-{{ id }}">
         <div class="au-accordion__body-wrapper">{{ body }}</div>
       </div>
 
